# SpaceInvaders

./: CMakeLists.txt  main.cpp
Classes/: Alien.cpp  Alien.h  AlienArmy.cpp  AlienArmy.h  Bullet.cpp  Bullet.h  Client.cpp  Client.h  Menu.cpp  Menu.h  MenuObraz.cpp  MenuObraz.h  Player.cpp  Player.h  Server.cpp  Server.h  Text.cpp  Text.h
